USe kebab-case for components selectors

--- a/src/app/myCode/parent.html
+++ b/src/app/myCode/parent.html
@@ -4,5 +4,5 @@
 
   An input with ng-model for double binding : <input type="text" id="firstdoublebinding" [(ngModel)]="allo.name"/><br/>
   The child directive setted in the parent template :
-  <child [whatever]="allo"></child>
+  <child-component [whatever]="allo"></child-component>
 </div>
