--- a/src/app/main.html
+++ b/src/app/main.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <fountain-header></fountain-header>
   <main class="main">
-    <parent></parent>
+    <parent-component></parent-component>
   </main>
   <fountain-footer></fountain-footer>
 </div>
