--- a/src/app/myCode/parent.html
+++ b/src/app/myCode/parent.html
@@ -1,8 +1,9 @@
 <div *ngIf="allo">
-  Full allo object (allo == shared by reference) {{allo | json}}<br/>
-  Shared.id and Shared.name : {{shared.id}} {{shared.name}}<br/>
+    Full allo object (allo == shared by reference) {{allo | json}}<br/>
+    Shared.id and Shared.name : {{shared.id}} {{shared.name}}<br/>
 
-  An input with ng-model for double binding : <input type="text" id="firstdoublebinding" [(ngModel)]="allo.name"/><br/>
-  The child directive setted in the parent template :
-  <child-component [whatever]="allo"></child-component>
+    An input with ng-model for double binding :
+    <input type="text" id="firstdoublebinding" [(ngModel)]="allo.name"/><br/>
+    The child directive setted in the parent template :
+    <child-component [whatever]="allo"></child-component>
 </div>
