--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <h1>
-  {{title}}<br>
-  <input type="text" id="firstdoublebinding" [(ngModel)]="inputTextBinded"/>
-  {{inputText.getId()}}
-  <span *ngIf="inputText.getId() <= 1">second</span>
-  <span *ngIf="inputText.getId() > 1">seconds</span>
-  <br><br>
-  <app-second [bindingFromAppComponent]="inputText"></app-second>
-
+    {{title}}<br>
+    <input type="text" id="firstdoublebinding" [(ngModel)]="inputTextBinded"/>
+    {{inputText.getId()}}
+    <span *ngIf="inputText.getId() <= 1">second</span>
+    <span *ngIf="inputText.getId() > 1">seconds</span>
+    <br><br>
+    {{httpResults | json}}
+    <br>
+    <br>
+    <app-second [bindingFromAppComponent]="inputText"></app-second>
 </h1>
