--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <h1>
     {{title}}<br>
+    <img src="assets/1/2/index.png">
     <input type="text" id="firstdoublebinding" [(ngModel)]="inputTextBinded"/>
     {{inputText.getId()}}
     <span *ngIf="inputText.getId() <= 1">second</span>
     <span *ngIf="inputText.getId() > 1">seconds</span>
+    bli <i class="fa fa-caret-square-o-down"></i> bla
     <br><br>
     {{httpResults | json}}
     <br>
