--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     {{inputText.getId()}}
     <span *ngIf="inputText.getId() <= 1">second</span>
     <span *ngIf="inputText.getId() > 1">seconds</span>
-    bli <i class="fa fa-caret-square-o-down"></i> bla
+    <i class="fa fa-caret-square-o-down"></i>
     <br><br>
     {{httpResults | json}}
     <br>
