--- a/src/app/second/second.component.html
+++ b/src/app/second/second.component.html
@@ -2,3 +2,4 @@
     <input type="text" [(ngModel)]="color">
     {{bindingFromAppComponent | json}}
 </p>
+<input type="text" id="double-binded-child" [ngModel]="doubleBindedChild" (ngModelChange)="detectNgModelChanges($event)">
