Add options to spinner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<spinner></spinner>
+<spinner [spinner]="Spinkit.skWanderingCubes" [backgroundColor]="'#ff0000'"></spinner>
 <h1>
     {{title}}<br>
     <img src="assets/1/2/index.png">
