Add and test a pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,5 @@
     ></app-child>
     <br/>
     <input type="text" id="double-binded-parent" [(ngModel)]="doubleBindedParent"><br/>
+    {{doubleBindedParent | toUppercase}}
 </h1>
