Lowercase var name

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="first">
     <h1>AppComponent</h1>
-    <spinner [spinner]="Spinkit.skWanderingCubes" [backgroundColor]="'#ff0000'"></spinner>
+    <spinner [spinner]="spinkit.skWanderingCubes" [backgroundColor]="'#ff0000'"></spinner>
     <div>{{title}}<br>
         <img src="assets/1/2/index.png">
     </div>
