import exported default

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,4 +1,6 @@
 <i class="far fa-address-card"></i>
+<i class="far fa-check-circle"></i>
+<i class="fas fa-angle-double-left"></i>
 <div id="sec">
     <h1>ChildComponent</h1>
     <p appColor [color]="color">
