Angular 6 integration + latest ng-cli defaults

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="first">
     <h1>AppComponent</h1>
     <spinner [spinner]="spinkit.skWanderingCubes" [backgroundColor]="'#ff0000'"></spinner>
-    <div>{{title}}<br>
+    <div><span id="title">{{title}}</span><br>
         <img src="assets/1/2/index.png">
     </div>
 
