--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="first">
     <h1>AppComponent</h1>
-    <spinner [spinner]="spinkit.skWanderingCubes" [backgroundColor]="'#ff0000'"></spinner>
+    <ng-http-loader [spinner]="spinkit.skWanderingCubes" [backgroundColor]="'#ff0000'"></ng-http-loader>
     <div><span id="title">{{title}}</span><br>
         <img src="assets/1/2/index.png">
     </div>
