Double binding / NgModel with get/set

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,9 @@
     <div>
         <app-child
             [bindingFromAppComponent]="inputText"
-            [(doubleBindedChild)]="doubleBindedParent">
+            [(doubleBindedChild)]="doubleBindedParent"
+            [(doubleBindedChild2)]="doubleBindedParent"
+        >
         </app-child>
     </div>
 
