--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -8,4 +8,7 @@
         {{bindingFromAppComponent | json}}
     </p>
     <input type="text" id="double-binded-child" [ngModel]="doubleBindedChild" (ngModelChange)="emitNgModelChanges($event)">
+    <br>
+    <input type="text" id="double-binded-child2" [(ngModel)]="doubleBindedChild2">
+
 </div>
