--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -10,5 +10,13 @@
     <input type="text" id="double-binded-child" [ngModel]="doubleBindedChild" (ngModelChange)="emitNgModelChanges($event)">
     <br>
     <input type="text" id="double-binded-child2" [(ngModel)]="doubleBindedChild2">
+</div>
 
+<div id="app">
+    <app-search-filter [(applicationsList)]="applicationsList"></app-search-filter>
+    <table id="mytable">
+        <tr *ngFor="let application of applicationsList">
+            <td>{{application}}</td>
+        </tr>
+    </table>
 </div>
