accessible styled (<3) checkbox

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -11,6 +11,8 @@
     <input type="text" id="double-binded-child2" [(ngModel)]="doubleBindedChild2">
 </div>
 
+<app-checkbox></app-checkbox>
+
 <div id="app">
     <app-search-filter [(applicationsList)]="applicationsList"></app-search-filter>
     <table id="mytable">
