blur instead of foucsout

--- a/src/app/checkbox/checkbox.component.html
+++ b/src/app/checkbox/checkbox.component.html
@@ -14,7 +14,7 @@
            name="checkbox"
            id="checkbox"
            (focus)="toggleLabelClass()"
-           (focusout)="toggleLabelClass()"
+           (blur)="toggleLabelClass()"
            [(ngModel)]="isChecked"
            class="sr-only">
 </div>
