--- a/src/app/fav-star/fav-star.component.scss
+++ b/src/app/fav-star/fav-star.component.scss
@@ -15,7 +15,7 @@ $is-fav-color: #ffac33;
     }
 
     &:focus {
-        outline: none;
+        outline: 2px solid #ffbf47;
     }
 
     &:hover {
