--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -11,6 +11,10 @@
     <input type="text" id="double-binded-child2" [(ngModel)]="doubleBindedChild2">
 </div>
 
+<hr>
+<intl-tel-input [(E164PhoneNumber)]="E164PhoneNumber"></intl-tel-input> ==> Valid ? : {{!!E164PhoneNumber}}, {{E164PhoneNumber}}
+<hr>
+
 <app-checkbox></app-checkbox>
 
 <div id="app">
