useless function parameter

--- a/src/app/intl-tel-input/intl-tel-input.component.html
+++ b/src/app/intl-tel-input/intl-tel-input.component.html
@@ -4,6 +4,6 @@
        name="phone"
        required="required"
        [(ngModel)]="phoneNumber"
-       (countrychange)="i18nizePhoneNumber($event)"
+       (countrychange)="i18nizePhoneNumber()"
        #intlTelInput>
 
