--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -17,9 +17,11 @@
     <intl-tel-input
         [cssClass]="'form-control'"
         [required]="true"
-        [countryCodes]="['fr', 'ch']"
-        [preferredCountries]="['ch']"
-        [localizedCountries]="{ ch: 'Suisse' }"
+        [options]="{
+            preferredCountries:['ch'],
+            onlyCountries: ['fr', 'ch']
+        }"
+        [onlyLocalized]="true"
         [(E164PhoneNumber)]="E164PhoneNumber"></intl-tel-input>
     ==> Valid ? : {{!!E164PhoneNumber}}, {{E164PhoneNumber}}
 </form>
