--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -9,6 +9,8 @@
     <input type="text" id="double-binded-child" [ngModel]="doubleBindedChild" (ngModelChange)="emitNgModelChanges($event)">
     <br>
     <input type="text" id="double-binded-child2" [(ngModel)]="doubleBindedChild2">
+    <br>
+    <input type="text" id="double-binded-child3" name="double-binded-child3" [(ngModel)]="doubleBindedChild3">
 </div>
 
 <hr>
