chore: Use built-in control flow

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -28,6 +28,8 @@
 
 <app-checkbox></app-checkbox>
 
-<div id="app" *ngIf="(applicationsList$ | async) as applicationsList">
-    <app-search-filter [applicationsList]="applicationsList"></app-search-filter>
-</div>
+@if ((applicationsList$ | async); as applicationsList) {
+    <div id="app">
+        <app-search-filter [applicationsList]="applicationsList"></app-search-filter>
+    </div>
+}
