--- a/src/app/fav-star/fav-star.component.html
+++ b/src/app/fav-star/fav-star.component.html
@@ -3,12 +3,10 @@
     [class.fav]="application?.isFav"
     (click)="toggleFavorite()"
     title="Marquer cette application comme favorite">
-    <span *ngIf="application?.isFav; then fav else notFav"></span>
+    @if (application?.isFav) {
+        &#9733;
+    } @else {
+        &#9734;
+    }
     <ng-content></ng-content>
 </button>
-<ng-template #fav >
-    &#9733;
-</ng-template>
-<ng-template #notFav>
-    &#9734;
-</ng-template>
